# MarketplaceCore

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
src/db_core/: __init__.py
src/db_core/models/: base.py  buyer.py  seller.py
src/db_core/repos/: base.py
src/seller_core/: models.py  repositories.py  services.py
src/user_core/: models.py  services.py
